--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -3,5 +3,4 @@ body {
   padding: 0px;
   margin: auto;
   font-family: "Poppins", sans-serif;
-  box-sizing: border-box;
 }
